--- a/GP16Editor/Views/AutoPanpotView.xaml
+++ b/GP16Editor/Views/AutoPanpotView.xaml
@@ -2,16 +2,18 @@
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:vm="clr-namespace:GP16Editor.ViewModels"
+             xmlns:controls="clr-namespace:GP16Editor.Controls"
              x:Class="GP16Editor.Views.AutoPanpotView"
              x:DataType="vm:AutoPanpotViewModel">
-    <VerticalStackLayout>
+    <Border Stroke="LightGray" StrokeThickness="1" Padding="5">
+        <VerticalStackLayout>
         <Label Text="Auto Panpot" FontAttributes="Bold" />
 
-        <Label Text="{Binding Rate, StringFormat='Rate: {0:F0}'}" />
-        <Slider x:Name="RateSlider" Minimum="0" Maximum="100" Value="{Binding Rate}" />
+        <Label Text="Rate" />
+        <controls:CircularSlider Minimum="0" Maximum="100" Value="{Binding Rate}" />
 
-        <Label Text="{Binding Depth, StringFormat='Depth: {0:F0}'}" />
-        <Slider x:Name="DepthSlider" Minimum="0" Maximum="100" Value="{Binding Depth}" />
+        <Label Text="Depth" />
+        <controls:CircularSlider Minimum="0" Maximum="100" Value="{Binding Depth}" />
 
         <Picker Title="Mode" SelectedItem="{Binding Mode}">
             <Picker.ItemsSource>
@@ -21,5 +23,6 @@
                 </x:Array>
             </Picker.ItemsSource>
         </Picker>
-    </VerticalStackLayout>
+        </VerticalStackLayout>
+    </Border>
 </ContentView>
