--- a/GP16Editor/Views/DistortionOverdriveView.xaml
+++ b/GP16Editor/Views/DistortionOverdriveView.xaml
@@ -1,24 +1,27 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:controls="clr-namespace:GP16Editor.Controls"
              x:Class="GP16Editor.Views.DistortionOverdriveView"
              xmlns:viewModels="clr-namespace:GP16Editor.ViewModels"
              x:DataType="viewModels:DistortionOverdriveViewModel">
-    <VerticalStackLayout>
+    <Border Stroke="LightGray" StrokeThickness="1" Padding="5">
+        <VerticalStackLayout>
         <Label Text="Distortion / Overdrive" FontAttributes="Bold" />
 
-        <Label Text="{Binding Drive, StringFormat='Drive: {0:F0}'}" />
-        <Slider x:Name="DriveSlider" Minimum="0" Maximum="100" Value="{Binding Drive}" />
+        <Label Text="Drive" />
+        <controls:CircularSlider Minimum="0" Maximum="100" Value="{Binding Drive}" />
 
         <HorizontalStackLayout>
             <Label Text="Turbo" />
             <Switch IsToggled="{Binding Turbo}" />
         </HorizontalStackLayout>
 
-        <Label Text="{Binding Tone, StringFormat='Tone: {0:F0}'}" />
-        <Slider x:Name="ToneSlider" Minimum="-50" Maximum="50" Value="{Binding Tone}" />
+        <Label Text="Tone" />
+        <controls:CircularSlider Minimum="-50" Maximum="50" Value="{Binding Tone}" />
 
-        <Label Text="{Binding Level, StringFormat='Level: {0:F0}'}" />
-        <Slider x:Name="LevelSlider" Minimum="0" Maximum="100" Value="{Binding Level}" />
-    </VerticalStackLayout>
+        <Label Text="Level" />
+        <controls:CircularSlider Minimum="0" Maximum="100" Value="{Binding Level}" />
+        </VerticalStackLayout>
+    </Border>
 </ContentView>
