--- a/GP16Editor/Views/SpaceDView.xaml
+++ b/GP16Editor/Views/SpaceDView.xaml
@@ -4,7 +4,8 @@
              xmlns:vm="clr-namespace:GP16Editor.ViewModels"
              x:Class="GP16Editor.Views.SpaceDView"
              x:DataType="vm:SpaceDViewModel">
-    <VerticalStackLayout>
+    <Border Stroke="LightGray" StrokeThickness="1" Padding="5">
+        <VerticalStackLayout>
         <Label Text="Space-D" FontAttributes="Bold" />
 
         <Picker Title="Mode" SelectedItem="{Binding Mode}">
@@ -18,4 +19,5 @@
             </Picker.ItemsSource>
         </Picker>
     </VerticalStackLayout>
+    </Border>
 </ContentView>
